fix: подправить замечания